spiceparser/eqn.h

/**  dependency lists  ***/


typedef struct eqnlist_st
{
  names_t *params;
  list_t  eqnlist;
  list_t  cache;
}eqnlist_t;