spiceparser/netlist_lib.h

typedef struct nlibiol_st
{
  list_t iol;
  int qtokens; /* product (iol[k].tokens) */
}nlibiol_t;
/* container of database objects */
typedef struct nlib_st
{
  list_t iodefs;
  list_t db;      /* our database of nlibdb objects */
  names_t *dbref; /* database gate reference names */
  names_t *vref;  /* voltage reference node names */
  int qvref;
  list_t funcs; /* ptrs */
  names_t *funcnames;
  eqnlist_t eqnl; /* top level parameters we can use anywhere in eqns */
  bitlist_t *flags;  /* user can select set of elements to use */
  list_t flatdb; /* database of flat info */
  void *eqn_mem;
}nlib_t;
typedef struct nlib_icall_st
{
  int dbi;
  int flatdbi;
  float *in[NLIBIO_MAXNODES];
  float *out[NLIBIO_MAXNODES];
  int itokens[NLIB_MAXPHASES], otokens[NLIB_MAXPHASES], ctoken;
  int ver;
  int err;
  int idigitize, odigitize;
  int inode,onode;
}nlib_icall_t;
typedef struct nlib_ifref_st
{
  float *val;
  float vals[NLIB_MAXPHASES];
  char name[NLIB_MAXFREF];
}nlib_ifref_t;
typedef enum nlib_refid_en
{
  NLIBref_vss, /* the vdd/vss values are used by cmos digitalize */
  NLIBref_vdd, 
  NLIBref_clk, /* clk is generic refering to some clock signal */
  NLIBref_firstunused, /* user can allocate any ref ids after this point */
  NLIBref_max=512
}nlib_refid_e;
typedef struct nlib_iface_st
{
  nlib_t *nlib;
  list_t icalls;
  list_t frefs;
  int ref_map[NLIBref_max];
  int phase;
  float * (*lookup_node_f)(void *user, char *name);
  void *user;
}nlib_iface_t;
typedef enum nlib_tokens_en
{
  Knlib_start=1024,  Knlib_nlib,Knlib_input,  Knlib_output,
  Knlib_param,  Knlib_netlist,  Knlib_spice,
  Knlib_encoding,    Knlib_wires,
  Knlib_tokens,  Knlib_digitize,  Knlib_digital, Knlib_qtyin, Knlib_qtyout,
  Knlib_end_digital, Knlib_min, Knlib_max, Knlib_qty,
  Knlib_function, Knlib_end_netlist, Knlib_define,
  Knlib_reference, Knlib_name, Knlib_rseries, Knlib_cshunt, Knlib_delay,
  Knlib_p_delay, Knlib_p_offset, Knlib_p_cycle,
  Knlib_end
}nlib_tokens_t;
typedef struct nlib_process_st
{
  /* filled in by user */
  void (*process)(struct nlib_process_st *proc);
  void *user;
  nlib_t *nlib;

  /* filled in by nlib_process before user->process() is called */
  int lib_index;
  int db_index;
  netlist_t *nl;
}nlib_process_t;
 
 

int nlib_parse(nlib_t *nlib, scanner_t *scan);
int nlib_add_io(nlib_t *nlib, int dbindex, nlibiol_t *io, int tokens, int nodes, int dig, char **names);
int nlib_init(nlib_t *nlib);
int nlib_add_pm(nlib_t *nlib, int dbi, char *str, float min, float max, int qty);
int nlib_new_db(nlib_t *nlib, char *str);
int nlib_db_netlist(nlib_t *nlib, int index, netlist_t *nl);
int nlib_db_func(nlib_t *nlib, int index, char *str);
void nlib_process(nlib_process_t *user, int screened);
void nlib_fixup(nlib_t *nlib);
void nlib_disable(nlib_t *nlib, int index);
int nlib_isdisabled(nlib_t *nlib, int index);
void nlib_release(nlib_t *nlib);
void *nlib_flat(nlib_process_t *user, int s_uservals, int q_uservals);
void nlib_o_spice_subckts(nlib_t *nlib, void * of_fp);
void nlib_o_spice_call(nlib_t *nlib, int index, int i_node, int o_node, int *skt, void * of);
void nlib_o_spice_refs(nlib_t *nlib, void * of_fp);