spiceparser/netlist.h

/* internal definition of netlist type */
typedef union netlist_input_un
{
  void *p;
  geninput_t *generic;
  struct spice_st *spice;
  struct extract_st *ext;
}netlist_input_t;
/**** entities:  

      an entity_t describes and holds a list of devices 
      
      the flexible device structure is formatted as follows 
      {
      dev_input_t parent;
      termptr_t terms[e->qterms];
      eqn_t vals[e->qvals];
      rest....
      }

*****/

typedef struct entity_st
{
  list_t l;
  int qterms;   /* q terms of in generic structure */
  int qvals;    /* q values in generic structure   */
  int qcount;   /* counted number, low level       */
  int id;       /* uniq device id                  */
  int qother;   /* bytes of other info in dev structure */
  char sym[8];  /* symbolic name                   */
}entity_t;
typedef struct netlist_st
{
  netlist_input_t input; /* where the netlist came from                   */
  void *eqn_mem; /* where we store our equations */
  int iscopy;   /* this is set if we shouldn't free/modify some structures */
  names_t *names; /* key off of node indices                              */
  eqnlist_t eqnl;
  int qe; /* valid entities */
  entity_t e[TERMPTR_MAX_DEVT];  
}netlist_t;