spiceparser/spiceparser.py


struct_nlib_st.__slots__ = [
    'iodefs',
    'db',
    'dbref',
    'vref',
    'qvref',
    'funcs',
    'funcnames',
    'eqnl',
    'flags',
    'flatdb',
    'eqn_mem',
]
struct_nlib_st._fields_ = [
    ('iodefs', list_t),
    ('db', list_t),
    ('dbref', POINTER(names_t)),
    ('vref', POINTER(names_t)),
    ('qvref', c_int),
    ('funcs', list_t),
    ('funcnames', POINTER(names_t)),
    ('eqnl', eqnlist_t),
    ('flags', POINTER(bitlist_t)),
    ('flatdb', list_t),
    ('eqn_mem', POINTER(None)),
]

nlib_t = struct_nlib_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 142

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 157
class struct_nlib_icall_st(Structure):
    pass

struct_nlib_icall_st.__slots__ = [
    'dbi',
    'flatdbi',
    '_in',
    'out',
    'itokens',
    'otokens',
    'ctoken',
    'ver',
    'err',
    'idigitize',
    'odigitize',
    'inode',
    'onode',
]
struct_nlib_icall_st._fields_ = [
    ('dbi', c_int),
    ('flatdbi', c_int),
    ('_in', POINTER(c_float) * 4),
    ('out', POINTER(c_float) * 4),
    ('itokens', c_int * 4),
    ('otokens', c_int * 4),
    ('ctoken', c_int),
    ('ver', c_int),
    ('err', c_int),
    ('idigitize', c_int),
    ('odigitize', c_int),
    ('inode', c_int),
    ('onode', c_int),
]

nlib_icall_t = struct_nlib_icall_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 157

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 165
class struct_nlib_ifref_st(Structure):
    pass

struct_nlib_ifref_st.__slots__ = [
    'val',
    'vals',
    'name',
]
struct_nlib_ifref_st._fields_ = [
    ('val', POINTER(c_float)),
    ('vals', c_float * 4),
    ('name', c_char * 64),
]

nlib_ifref_t = struct_nlib_ifref_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 165

enum_nlib_refid_en = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

NLIBref_vss = 0 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

NLIBref_vdd = (NLIBref_vss + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

NLIBref_clk = (NLIBref_vdd + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

NLIBref_firstunused = (NLIBref_clk + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

NLIBref_max = 512 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

nlib_refid_e = enum_nlib_refid_en # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 174

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 185
class struct_nlib_iface_st(Structure):
    pass

struct_nlib_iface_st.__slots__ = [
    'nlib',
    'icalls',
    'frefs',
    'ref_map',
    'phase',
    'lookup_node_f',
    'user',
]
struct_nlib_iface_st._fields_ = [
    ('nlib', POINTER(nlib_t)),
    ('icalls', list_t),
    ('frefs', list_t),
    ('ref_map', c_int * NLIBref_max),
    ('phase', c_int),
    ('lookup_node_f', CFUNCTYPE(UNCHECKED(POINTER(c_float)), POINTER(None), String)),
    ('user', POINTER(None)),
]

nlib_iface_t = struct_nlib_iface_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 185

enum_nlib_tokens_en = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_start = 1024 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_nlib = (Knlib_start + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_input = (Knlib_nlib + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_output = (Knlib_input + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_param = (Knlib_output + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_netlist = (Knlib_param + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_spice = (Knlib_netlist + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_encoding = (Knlib_spice + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_wires = (Knlib_encoding + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_tokens = (Knlib_wires + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_digitize = (Knlib_tokens + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_digital = (Knlib_digitize + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_qtyin = (Knlib_digital + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_qtyout = (Knlib_qtyin + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_end_digital = (Knlib_qtyout + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_min = (Knlib_end_digital + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_max = (Knlib_min + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_qty = (Knlib_max + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_function = (Knlib_qty + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_end_netlist = (Knlib_function + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_define = (Knlib_end_netlist + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_reference = (Knlib_define + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_name = (Knlib_reference + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_rseries = (Knlib_name + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_cshunt = (Knlib_rseries + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_delay = (Knlib_cshunt + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_p_delay = (Knlib_delay + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_p_offset = (Knlib_p_delay + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_p_cycle = (Knlib_p_offset + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

Knlib_end = (Knlib_p_cycle + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

nlib_tokens_t = enum_nlib_tokens_en # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 198

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 232
class struct_nlib_process_st(Structure):
    pass

struct_nlib_process_st.__slots__ = [
    'process',
    'user',
    'nlib',
    'lib_index',
    'db_index',
    'nl',
]
struct_nlib_process_st._fields_ = [
    ('process', CFUNCTYPE(UNCHECKED(None), POINTER(struct_nlib_process_st))),
    ('user', POINTER(None)),
    ('nlib', POINTER(nlib_t)),
    ('lib_index', c_int),
    ('db_index', c_int),
    ('nl', POINTER(netlist_t)),
]

nlib_process_t = struct_nlib_process_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 243

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 246
if hasattr(_libs['spiceparser'], 'nlib_parse'):
    nlib_parse = _libs['spiceparser'].nlib_parse
    nlib_parse.argtypes = [POINTER(nlib_t), POINTER(scanner_t)]
    nlib_parse.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 247
if hasattr(_libs['spiceparser'], 'nlib_add_io'):
    nlib_add_io = _libs['spiceparser'].nlib_add_io
    nlib_add_io.argtypes = [POINTER(nlib_t), c_int, POINTER(nlibiol_t), c_int, c_int, c_int, POINTER(POINTER(c_char))]
    nlib_add_io.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 248
if hasattr(_libs['spiceparser'], 'nlib_init'):
    nlib_init = _libs['spiceparser'].nlib_init
    nlib_init.argtypes = [POINTER(nlib_t)]
    nlib_init.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 249
if hasattr(_libs['spiceparser'], 'nlib_add_pm'):
    nlib_add_pm = _libs['spiceparser'].nlib_add_pm
    nlib_add_pm.argtypes = [POINTER(nlib_t), c_int, String, c_float, c_float, c_int]
    nlib_add_pm.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 250
if hasattr(_libs['spiceparser'], 'nlib_new_db'):
    nlib_new_db = _libs['spiceparser'].nlib_new_db
    nlib_new_db.argtypes = [POINTER(nlib_t), String]
    nlib_new_db.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 251
if hasattr(_libs['spiceparser'], 'nlib_db_netlist'):
    nlib_db_netlist = _libs['spiceparser'].nlib_db_netlist
    nlib_db_netlist.argtypes = [POINTER(nlib_t), c_int, POINTER(netlist_t)]
    nlib_db_netlist.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 252
if hasattr(_libs['spiceparser'], 'nlib_db_func'):
    nlib_db_func = _libs['spiceparser'].nlib_db_func
    nlib_db_func.argtypes = [POINTER(nlib_t), c_int, String]
    nlib_db_func.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 253
if hasattr(_libs['spiceparser'], 'nlib_process'):
    nlib_process = _libs['spiceparser'].nlib_process
    nlib_process.argtypes = [POINTER(nlib_process_t), c_int]
    nlib_process.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 254
if hasattr(_libs['spiceparser'], 'nlib_fixup'):
    nlib_fixup = _libs['spiceparser'].nlib_fixup
    nlib_fixup.argtypes = [POINTER(nlib_t)]
    nlib_fixup.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 255
if hasattr(_libs['spiceparser'], 'nlib_disable'):
    nlib_disable = _libs['spiceparser'].nlib_disable
    nlib_disable.argtypes = [POINTER(nlib_t), c_int]
    nlib_disable.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 256
if hasattr(_libs['spiceparser'], 'nlib_isdisabled'):
    nlib_isdisabled = _libs['spiceparser'].nlib_isdisabled
    nlib_isdisabled.argtypes = [POINTER(nlib_t), c_int]
    nlib_isdisabled.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 258
if hasattr(_libs['spiceparser'], 'nlib_release'):
    nlib_release = _libs['spiceparser'].nlib_release
    nlib_release.argtypes = [POINTER(nlib_t)]
    nlib_release.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 260
if hasattr(_libs['spiceparser'], 'nlib_flat'):
    nlib_flat = _libs['spiceparser'].nlib_flat
    nlib_flat.argtypes = [POINTER(nlib_process_t), c_int, c_int]
    nlib_flat.restype = POINTER(None)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 261
if hasattr(_libs['spiceparser'], 'nlib_o_spice_subckts'):
    nlib_o_spice_subckts = _libs['spiceparser'].nlib_o_spice_subckts
    nlib_o_spice_subckts.argtypes = [POINTER(nlib_t), POINTER(None)]
    nlib_o_spice_subckts.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 262
if hasattr(_libs['spiceparser'], 'nlib_o_spice_call'):
    nlib_o_spice_call = _libs['spiceparser'].nlib_o_spice_call
    nlib_o_spice_call.argtypes = [POINTER(nlib_t), c_int, c_int, c_int, POINTER(c_int), POINTER(None)]
    nlib_o_spice_call.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_lib.h: 263
if hasattr(_libs['spiceparser'], 'nlib_o_spice_refs'):
    nlib_o_spice_refs = _libs['spiceparser'].nlib_o_spice_refs
    nlib_o_spice_refs.argtypes = [POINTER(nlib_t), POINTER(None)]
    nlib_o_spice_refs.restype = None
